--- a/dashboard/requirements.txt
+++ b/dashboard/requirements.txt
@@ -1,3 +1,2 @@
-streamlit>=1.31.0
-requests>=2.31.0
-pandas>=2.0.0
+# Deprecated: use the unified requirements at project root
+# This file is intentionally empty.
