--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -3,21 +3,21 @@ kind: Ingress
 metadata:
   name: paralelas-ingress
   annotations:
-    kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
+  ingressClassName: nginx
   rules:
     - host: your-domain.example.com
       http:
         paths:
-          - path: /api/?(.*)
+          - path: /api
             pathType: Prefix
             backend:
               service:
                 name: analysis-service
                 port:
                   number: 8000
-          - path: /()(.*)
+          - path: /
             pathType: Prefix
             backend:
               service:
